tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__alias_access_path_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/alias-access-path-2.c" (c, x86_64-unknown-linux-gnu)
global __const.main.out : u8i[1][3] = [[71], [71], [71]] [cir_private, default, dso_local, constant]

fn abort() -> void [external, c, nothrow];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        %3 = alloca s32i, "c", align 4
        %4 = alloca u8i[1][3], "out", align 1
        store %arg0, %0
        store %arg1, %1
        %5 = const 0 : s32i
        store %5, %2
        %6 = get_global @__const.main.out : u8i[1][3]*
        copy %4, %6
        scope {
            %9 = alloca s32i, "i", align 4
            %10 = const 0 : s32i
            store %10, %9, align 4
            for cond: {
                %21 = load %9 : s32i, align 4
                %22 = const 3 : s32i
                %23 = cmp lt %21, %22 : bool
                condition %23
            } step: {
                %11 = load %9 : s32i, align 4
                %12 = inc %11 : s32i [nsw]
                store %12, %9, align 4
                yield
            } do {
                scope {
                    %13 = const 0 : s64i
                    %14 = load %9 : s32i, align 4
                    %15 = cast(integral) %14 : s64i
                    %16 = get_element %4[%15] : u8i[1]*
                    %17 = get_element %16[%13] : u8i*
                    %18 = load %17 : u8i, align 1
                    %19 = cast(int_to_bool) %18 : bool
                    %20 = not %19 : bool
                    if %20 {
                        call @abort() [all]
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %7 = const 0 : s32i
        store %7, %2
        %8 = load %2 : s32i
        return %8
}
