tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__align_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/align-2.c" (c, x86_64-unknown-linux-gnu)
global s_c_s : rec_a_short = {97, 13} [external, default, align 2, dso_local]
global s_c_i : rec_a_int = {98, 14} [external, default, align 4, dso_local]
global s_s_i : rec_b_int = {15, 16} [external, default, align 4, dso_local]
global s_c_f : rec_a_float = {99, 1.700000e+01} [external, default, align 4, dso_local]
global s_s_f : rec_b_float = {18, 1.900000e+01} [external, default, align 4, dso_local]
global s_c_d : rec_a_double = {100, 2.000000e+01} [external, default, align 8, dso_local]
global s_s_d : rec_b_double = {21, 2.200000e+01} [external, default, align 8, dso_local]
global s_i_d : rec_c_double = {23, 2.400000e+01} [external, default, align 8, dso_local]
global s_f_d : rec_d_double = {2.500000e+01, 2.600000e+01} [external, default, align 8, dso_local]
global s_c_ld : rec_a_ldouble = {101, 2.700000e+01} [external, default, align 16, dso_local]
global s_s_ld : rec_b_ldouble = {28, 2.900000e+01} [external, default, align 16, dso_local]
global s_i_ld : rec_c_ldouble = {30, 3.100000e+01} [external, default, align 16, dso_local]
global s_f_ld : rec_d_ldouble = {3.200000e+01, 3.300000e+01} [external, default, align 16, dso_local]
global s_d_ld : rec_e_ldouble = {3.400000e+01, 3.500000e+01} [external, default, align 16, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %184 = get_global @s_c_s : rec_a_short*
        %185 = get_member %184[0] "c" : s8i*
        %186 = load %185 : s8i, align 2
        %187 = cast(integral) %186 : s32i
        %188 = const 97 : s32i
        %189 = cmp ne %187, %188 : bool
        if %189 {
            %190 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %177 = get_global @s_c_s : rec_a_short*
        %178 = get_member %177[1] "s" : s16i*
        %179 = load %178 : s16i, align 2
        %180 = cast(integral) %179 : s32i
        %181 = const 13 : s32i
        %182 = cmp ne %180, %181 : bool
        if %182 {
            %183 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %170 = get_global @s_c_i : rec_a_int*
        %171 = get_member %170[0] "c" : s8i*
        %172 = load %171 : s8i, align 4
        %173 = cast(integral) %172 : s32i
        %174 = const 98 : s32i
        %175 = cmp ne %173, %174 : bool
        if %175 {
            %176 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %164 = get_global @s_c_i : rec_a_int*
        %165 = get_member %164[1] "i" : s32i*
        %166 = load %165 : s32i, align 4
        %167 = const 14 : s32i
        %168 = cmp ne %166, %167 : bool
        if %168 {
            %169 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %157 = get_global @s_s_i : rec_b_int*
        %158 = get_member %157[0] "s" : s16i*
        %159 = load %158 : s16i, align 4
        %160 = cast(integral) %159 : s32i
        %161 = const 15 : s32i
        %162 = cmp ne %160, %161 : bool
        if %162 {
            %163 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %151 = get_global @s_s_i : rec_b_int*
        %152 = get_member %151[1] "i" : s32i*
        %153 = load %152 : s32i, align 4
        %154 = const 16 : s32i
        %155 = cmp ne %153, %154 : bool
        if %155 {
            %156 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %144 = get_global @s_c_f : rec_a_float*
        %145 = get_member %144[0] "c" : s8i*
        %146 = load %145 : s8i, align 4
        %147 = cast(integral) %146 : s32i
        %148 = const 99 : s32i
        %149 = cmp ne %147, %148 : bool
        if %149 {
            %150 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %137 = get_global @s_c_f : rec_a_float*
        %138 = get_member %137[1] "f" : float*
        %139 = load %138 : float, align 4
        %140 = cast(floating) %139 : double
        %141 = const 1.700000e+01 : double
        %142 = cmp ne %140, %141 : bool
        if %142 {
            %143 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %130 = get_global @s_s_f : rec_b_float*
        %131 = get_member %130[0] "s" : s16i*
        %132 = load %131 : s16i, align 4
        %133 = cast(integral) %132 : s32i
        %134 = const 18 : s32i
        %135 = cmp ne %133, %134 : bool
        if %135 {
            %136 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %123 = get_global @s_s_f : rec_b_float*
        %124 = get_member %123[1] "f" : float*
        %125 = load %124 : float, align 4
        %126 = cast(floating) %125 : double
        %127 = const 1.900000e+01 : double
        %128 = cmp ne %126, %127 : bool
        if %128 {
            %129 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %116 = get_global @s_c_d : rec_a_double*
        %117 = get_member %116[0] "c" : s8i*
        %118 = load %117 : s8i, align 8
        %119 = cast(integral) %118 : s32i
        %120 = const 100 : s32i
        %121 = cmp ne %119, %120 : bool
        if %121 {
            %122 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %110 = get_global @s_c_d : rec_a_double*
        %111 = get_member %110[1] "d" : double*
        %112 = load %111 : double, align 8
        %113 = const 2.000000e+01 : double
        %114 = cmp ne %112, %113 : bool
        if %114 {
            %115 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %103 = get_global @s_s_d : rec_b_double*
        %104 = get_member %103[0] "s" : s16i*
        %105 = load %104 : s16i, align 8
        %106 = cast(integral) %105 : s32i
        %107 = const 21 : s32i
        %108 = cmp ne %106, %107 : bool
        if %108 {
            %109 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %97 = get_global @s_s_d : rec_b_double*
        %98 = get_member %97[1] "d" : double*
        %99 = load %98 : double, align 8
        %100 = const 2.200000e+01 : double
        %101 = cmp ne %99, %100 : bool
        if %101 {
            %102 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %91 = get_global @s_i_d : rec_c_double*
        %92 = get_member %91[0] "i" : s32i*
        %93 = load %92 : s32i, align 8
        %94 = const 23 : s32i
        %95 = cmp ne %93, %94 : bool
        if %95 {
            %96 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %85 = get_global @s_i_d : rec_c_double*
        %86 = get_member %85[1] "d" : double*
        %87 = load %86 : double, align 8
        %88 = const 2.400000e+01 : double
        %89 = cmp ne %87, %88 : bool
        if %89 {
            %90 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %78 = get_global @s_f_d : rec_d_double*
        %79 = get_member %78[0] "f" : float*
        %80 = load %79 : float, align 8
        %81 = cast(floating) %80 : double
        %82 = const 2.500000e+01 : double
        %83 = cmp ne %81, %82 : bool
        if %83 {
            %84 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %72 = get_global @s_f_d : rec_d_double*
        %73 = get_member %72[1] "d" : double*
        %74 = load %73 : double, align 8
        %75 = const 2.600000e+01 : double
        %76 = cmp ne %74, %75 : bool
        if %76 {
            %77 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %65 = get_global @s_c_ld : rec_a_ldouble*
        %66 = get_member %65[0] "c" : s8i*
        %67 = load %66 : s8i, align 16
        %68 = cast(integral) %67 : s32i
        %69 = const 101 : s32i
        %70 = cmp ne %68, %69 : bool
        if %70 {
            %71 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %58 = get_global @s_c_ld : rec_a_ldouble*
        %59 = get_member %58[1] "ld" : long_double<f80>*
        %60 = load %59 : long_double<f80>, align 16
        %61 = const 2.700000e+01 : double
        %62 = cast(floating) %61 : long_double<f80>
        %63 = cmp ne %60, %62 : bool
        if %63 {
            %64 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %51 = get_global @s_s_ld : rec_b_ldouble*
        %52 = get_member %51[0] "s" : s16i*
        %53 = load %52 : s16i, align 16
        %54 = cast(integral) %53 : s32i
        %55 = const 28 : s32i
        %56 = cmp ne %54, %55 : bool
        if %56 {
            %57 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %44 = get_global @s_s_ld : rec_b_ldouble*
        %45 = get_member %44[1] "ld" : long_double<f80>*
        %46 = load %45 : long_double<f80>, align 16
        %47 = const 2.900000e+01 : double
        %48 = cast(floating) %47 : long_double<f80>
        %49 = cmp ne %46, %48 : bool
        if %49 {
            %50 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %38 = get_global @s_i_ld : rec_c_ldouble*
        %39 = get_member %38[0] "i" : s32i*
        %40 = load %39 : s32i, align 16
        %41 = const 30 : s32i
        %42 = cmp ne %40, %41 : bool
        if %42 {
            %43 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %31 = get_global @s_i_ld : rec_c_ldouble*
        %32 = get_member %31[1] "ld" : long_double<f80>*
        %33 = load %32 : long_double<f80>, align 16
        %34 = const 3.100000e+01 : double
        %35 = cast(floating) %34 : long_double<f80>
        %36 = cmp ne %33, %35 : bool
        if %36 {
            %37 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %24 = get_global @s_f_ld : rec_d_ldouble*
        %25 = get_member %24[0] "f" : float*
        %26 = load %25 : float, align 16
        %27 = cast(floating) %26 : double
        %28 = const 3.200000e+01 : double
        %29 = cmp ne %27, %28 : bool
        if %29 {
            %30 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %17 = get_global @s_f_ld : rec_d_ldouble*
        %18 = get_member %17[1] "ld" : long_double<f80>*
        %19 = load %18 : long_double<f80>, align 16
        %20 = const 3.300000e+01 : double
        %21 = cast(floating) %20 : long_double<f80>
        %22 = cmp ne %19, %21 : bool
        if %22 {
            %23 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %11 = get_global @s_d_ld : rec_e_ldouble*
        %12 = get_member %11[0] "d" : double*
        %13 = load %12 : double, align 16
        %14 = const 3.400000e+01 : double
        %15 = cmp ne %13, %14 : bool
        if %15 {
            %16 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %4 = get_global @s_d_ld : rec_e_ldouble*
        %5 = get_member %4[1] "ld" : long_double<f80>*
        %6 = load %5 : long_double<f80>, align 16
        %7 = const 3.500000e+01 : double
        %8 = cast(floating) %7 : long_double<f80>
        %9 = cmp ne %6, %8 : bool
        if %9 {
            %10 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
