tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bf_sign_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/bf-sign-1.c" (c, x86_64-unknown-linux-gnu)
global __const.main.x : rec_anon2E0 = {511, zero} [cir_private, default, dso_local, constant]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_anon2E0, "x", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.x : rec_anon2E0*
    copy %1, %3
    scope {
        %23 = get_member %1[0] "u" : u16i*
        %24 = get_bitfield %23, "u": 3 bits @3 in u16i : u32i, align 4
        %25 = cast(integral) %24 : s32i
        %26 = const 7 : s32i
        %27 = cmp ne %25, %26 : bool
        if %27 {
            %28 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %18 = get_member %1[0] "s" : u16i*
        %19 = get_bitfield %18, "s": 3 bits @0 in signed u16i : s32i, align 4
        %20 = const -1 : s32i
        %21 = cmp ne %19, %20 : bool
        if %21 {
            %22 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %7 = get_member %1[0] "i" : u16i*
        %8 = get_bitfield %7, "i": 3 bits @6 in signed u16i : s32i, align 4
        %9 = const -1 : s32i
        %10 = cmp ne %8, %9 : bool
        %11 = ternary %10 ? { : bool
            %14 = get_member %1[0] "i" : u16i*
            %15 = get_bitfield %14, "i": 3 bits @6 in signed u16i : s32i, align 4
            %16 = const 7 : s32i
            %17 = cmp ne %15, %16 : bool
            yield %17
        } : {
            %13 = const false : bool
            yield %13
        }
        if %11 {
            %12 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %4 = get_global @exit : ((s32i) -> void)*
    %5 = const 0 : s32i
    call @exit(%5) [all]
    %6 = load %0 : s32i
    return %6
}
