tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bf_sign_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/bf-sign-2.c" (c, x86_64-unknown-linux-gnu)
global x : rec_X = zero [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %79 = get_global @x : rec_X*
        %80 = get_member %79[0] "u3" : u64i*
        <unmodeled: cir.get_bitfield>
        %82 = cast(integral) %81 : s32i
        %83 = const 2 : s32i
        %84 = sub %82, %83 : s32i [nsw]
        %85 = const 0 : s32i
        %86 = cmp ge %84, %85 : bool
        if %86 {
            %87 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %70 = get_global @x : rec_X*
        %71 = get_member %70[0] "s31" : u64i*
        <unmodeled: cir.get_bitfield>
        %73 = cast(integral) %72 : s32i
        %74 = const 2 : s32i
        %75 = sub %73, %74 : s32i [nsw]
        %76 = const 0 : s32i
        %77 = cmp ge %75, %76 : bool
        if %77 {
            %78 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %61 = get_global @x : rec_X*
        %62 = get_member %61[1] "s32" : u64i*
        <unmodeled: cir.get_bitfield>
        %64 = cast(integral) %63 : s32i
        %65 = const 2 : s32i
        %66 = sub %64, %65 : s32i [nsw]
        %67 = const 0 : s32i
        %68 = cmp ge %66, %67 : bool
        if %68 {
            %69 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %52 = get_global @x : rec_X*
        %53 = get_member %52[3] "u15" : u64i*
        <unmodeled: cir.get_bitfield>
        %55 = cast(integral) %54 : s32i
        %56 = const 2 : s32i
        %57 = sub %55, %56 : s32i [nsw]
        %58 = const 0 : s32i
        %59 = cmp ge %57, %58 : bool
        if %59 {
            %60 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %31 = const 4 : u64i
        %32 = const 4 : u64i
        %33 = cmp ge %31, %32 : bool
        if %33 {
            scope {
                %43 = get_global @x : rec_X*
                %44 = get_member %43[1] "u31" : u64i*
                <unmodeled: cir.get_bitfield>
                %46 = cast(integral) %45 : s32i
                %47 = const 2 : s32i
                %48 = sub %46, %47 : s32i [nsw]
                %49 = const 0 : s32i
                %50 = cmp ge %48, %49 : bool
                if %50 {
                    %51 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
                yield
            }
            yield
        } else {
            scope {
                %34 = get_global @x : rec_X*
                %35 = get_member %34[1] "u31" : u64i*
                <unmodeled: cir.get_bitfield>
                %37 = cast(integral) %36 : s32i
                %38 = const 2 : s32i
                %39 = sub %37, %38 : s32i [nsw]
                %40 = const 0 : s32i
                %41 = cmp lt %39, %40 : bool
                if %41 {
                    %42 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    scope {
        %22 = get_global @x : rec_X*
        %23 = get_member %22[2] "u32" : u64i*
        <unmodeled: cir.get_bitfield>
        %25 = cast(integral) %24 : u32i
        %26 = const 2 : u32i
        %27 = sub %25, %26 : u32i
        %28 = const 0 : u32i
        %29 = cmp lt %27, %28 : bool
        if %29 {
            %30 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %13 = get_global @x : rec_X*
        %14 = get_member %13[2] "ull3" : u64i*
        <unmodeled: cir.get_bitfield>
        %16 = cast(integral) %15 : s32i
        %17 = const 2 : s32i
        %18 = sub %16, %17 : s32i [nsw]
        %19 = const 0 : s32i
        %20 = cmp ge %18, %19 : bool
        if %20 {
            %21 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %5 = get_global @x : rec_X*
        %6 = get_member %5[3] "ull35" : u64i*
        <unmodeled: cir.get_bitfield>
        %8 = const 2 : u64i
        %9 = sub %7, %8 : u64i
        %10 = const 0 : u64i
        %11 = cmp lt %9, %10 : bool
        if %11 {
            %12 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
